add nav-bar to git.html

--- a/git.html
+++ b/git.html
@@ -7,5 +7,12 @@
   <body>
     <p>je suis boussetta sihem ta copine sarah hhh </p>
  <h1> sihem is perfect</h1>
+ <nav>
+   <ul>
+     <li> Github</li>
+     <li> Linux</li>
+     <li> Ubuntu</li>
+   </ul>
+ </nav>
   </body>
 </html>
